// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCallOut is rendered 1`] = `
<div
  aria-label="aria-label"
  class="euiCallOut euiCallOut--primary testClass1 testClass2"
  data-test-subj="test subject string"
>
  <div
    class="euiText euiText--small"
  >
    <div
      class="euiTextColor euiTextColor--default"
    >
      Content
    </div>
  </div>
</div>
`;

exports[`EuiCallOut props color danger is rendered 1`] = `
<div
  class="euiCallOut euiCallOut--danger"
/>
`;

exports[`EuiCallOut props color primary is rendered 1`] = `
<div
  class="euiCallOut euiCallOut--primary"
/>
`;

exports[`EuiCallOut props color success is rendered 1`] = `
<div
  class="euiCallOut euiCallOut--success"
/>
`;

exports[`EuiCallOut props color warning is rendered 1`] = `
<div
  class="euiCallOut euiCallOut--warning"
/>
`;

exports[`EuiCallOut props heading h1 is rendered 1`] = `
<div
  class="euiCallOut euiCallOut--primary"
/>
`;

exports[`EuiCallOut props heading h2 is rendered 1`] = `
<div
  class="euiCallOut euiCallOut--primary"
/>
`;

exports[`EuiCallOut props heading h3 is rendered 1`] = `
<div
  class="euiCallOut euiCallOut--primary"
/>
`;

exports[`EuiCallOut props heading h4 is rendered 1`] = `
<div
  class="euiCallOut euiCallOut--primary"
/>
`;

exports[`EuiCallOut props heading h5 is rendered 1`] = `
<div
  class="euiCallOut euiCallOut--primary"
/>
`;

exports[`EuiCallOut props heading h6 is rendered 1`] = `
<div
  class="euiCallOut euiCallOut--primary"
/>
`;

exports[`EuiCallOut props heading p is rendered 1`] = `
<div
  class="euiCallOut euiCallOut--primary"
/>
`;

exports[`EuiCallOut props iconType is rendered 1`] = `
<div
  class="euiCallOut euiCallOut--primary"
/>
`;

exports[`EuiCallOut props title is rendered 1`] = `
<div
  class="euiCallOut euiCallOut--primary"
>
  <div
    class="euiCallOutHeader"
  >
    <span
      class="euiCallOutHeader__title"
    >
      Title
    </span>
  </div>
  <div
    class="euiText euiText--small"
  >
    <div
      class="euiTextColor euiTextColor--default"
    >
      Content
    </div>
  </div>
</div>
`;
